# ChangeLog for kde-base/kdeaccounts-plugin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccounts-plugin/ChangeLog,v 1.31 2009/09/01 14:59:06 tampakrap Exp $

*kdeaccounts-plugin-4.3.1 (01 Sep 2009)

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdeaccounts-plugin-4.3.1.ebuild:
  Version bump

*kdeaccounts-plugin-4.3.0 (04 Aug 2009)

  04 Aug 2009; Alex Alexander <wired@gentoo.org>
  +kdeaccounts-plugin-4.3.0.ebuild:
  Version bump

  14 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccounts-plugin-4.2.3.ebuild:
  Drop KDE 4.2.3

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org> ChangeLog:
  Fix accidently added keywords

*kdeaccounts-plugin-4.2.4 (04 Jun 2009)

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  +kdeaccounts-plugin-4.2.4.ebuild:
  Version bump

  03 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccounts-plugin-4.2.2.ebuild:
  Drop KDE 4.2.2

*kdeaccounts-plugin-4.2.3 (06 May 2009)

  06 May 2009; Tomas Chvatal <scarabeus@gentoo.org>
  +kdeaccounts-plugin-4.2.3.ebuild:
  Version bump

  17 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org> kdeaccounts-plugin-4.2.2:
  Restore ~hppa keywords

  16 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccounts-plugin-4.2.1.ebuild:
  Drop KDE 4.2.1

*kdeaccounts-plugin-4.2.2 (11 Apr 2009)

  11 Apr 2009; Alexey Shvetsov <alexxy@gentoo.org>
  +kdeaccounts-plugin-4.2.2.ebuild:
  Add KDE 4.2.2

  15 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org>
  kdeaccounts-plugin-4.2.1.ebuild:
  Automatic-merge: merge updates for 4.2.1 from kde-testing.

  08 Mar 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccounts-plugin-4.2.0.ebuild:
  Drop KDE 4.2.0

*kdeaccounts-plugin-4.2.1 (04 Mar 2009)

  04 Mar 2009; Alexey Shvetsov <alexxy@gentoo.org>
  +kdeaccounts-plugin-4.2.1.ebuild:
  Bump KDE 4.2.1

  17 Feb 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeaccounts-plugin-4.1.4.ebuild:
  Drop KDE 4.1.4
