@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeaccounts-plugin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccounts-plugin/ChangeLog,v 1.31 2009/09/01 14:59:06 tampakrap Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccounts-plugin/ChangeLog,v 1.32 2009/10/06 18:29:57 alexxy Exp $
+
+*kdeaccounts-plugin-4.3.2 (06 Oct 2009)
+
+  06 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
+  +kdeaccounts-plugin-4.3.2.ebuild:
+  Version bump
 
 *kdeaccounts-plugin-4.3.1 (01 Sep 2009)
 
